--- a/roles/kdc/tasks/main.yml
+++ b/roles/kdc/tasks/main.yml
@@ -10,4 +10,35 @@
     src: templates/krb5.conf.j2
     dest: /etc/krb5.conf
     mode: 0755
+- stat: path=/var/kerberos/krb5kdc/principal    
+  register: kdc_db
+- name: Create kerberos database
+  expect:
+    command: kdb5_util create -s
+    responses:
+      database master key: "{{ db_master_key }}"
+      database master key to verify: "{{ db_master_key }}"
+  when: not kdc_db.stat.exists and ansible_facts['os_family'] == "RedHat"  
+- name: Start the KDC server and the KDC admin server
+  systemd:
+    name: "{{ item }}"
+    state: started
+    enabled: yes
+  when: ansible_facts['os_family'] == "RedHat"  
+  loop:
+    - krb5kdc
+    - kadmin
+- name: Create a Kerberos Admin
+  expect:
+    command: kadmin.local -q "addprinc admin/admin"
+    responses:
+      Enter password for principal: "{{ admin_princ_pswd }}"
+      Re-enter password for principal: "{{ admin_princ_pswd }}"
+  when: ansible_facts['os_family'] == "RedHat" 
+- name: restart the kadmin process
+  systemd:
+    name: kadmin
+    state: restarted
+    enabled: yes
+  when: ansible_facts['os_family'] == "RedHat"  
 ...
