--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -1,6 +1,12 @@
 ---
 release:
-        ambari:
+        ambari: 
+            url: http://s3.amazonaws.com/dev.hortonworks.com/ambari/centos7-ppc/2.x/BUILDS/2.7.3.0-48/ambaribn.repo
         hdf:
-        purge-mpack: yes
+            url: http://s3.amazonaws.com/dev.hortonworks.com/HDF/centos7-ppc/3.x/BUILDS/3.3.0.0-120/hdfbn.repo
+            mpack: http://s3.amazonaws.com/dev.hortonworks.com/HDF/centos7-ppc/3.x/BUILDS/3.3.0.0-120/tars/hdf_ambari_mp/hdf-ambari-mpack-3.3.0.0-120.tar.gz
+install:
+        hdf:
+            install: no
+            purge:  yes
 ...
