--- a/roles/ambari/tasks/main.yml
+++ b/roles/ambari/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Include vars of db.yml 
   include_vars:
-    file: db.yml
+    file: "{{inventory_dir}}/group_vars/db.yml"
     name: db
 - name: Download ambari.repo
   get_url:
@@ -44,7 +44,7 @@
     name: ambari
     target: /root/Ambari-DDL-MySQL-CREATE.sql    
     login_password: "{{db.dba.pswd}}"
-    login_user: "{{db.dba.user}}"   
+    login_user: "{{db.dba.name}}"    
 - name: start the ambari-server
   command: ambari-server restart    
 ...
