--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,5 +1,11 @@
 ---
 # common software installation
+- name: Download and set up  python tools
+  yum: name="{{ item }}" state=latest update_cache=yes
+  when: ansible_facts['os_family'] == "RedHat"
+  loop: 
+    - python-pip
+    - python-wheel 
 - name: install pexpect. It is required for interactive command line operations
   pip:
     name: pexpect
@@ -34,7 +40,7 @@
 - name: configure java home
   lineinfile:
     path: /root/.bashrc
-    line: 'export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk'
+    line: "export JAVA_HOME={{java.home}}"
     insertafter: EOF
     
 #- name: disable service firewalld 
