--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -5,9 +5,9 @@ release:
         hdf:
             url:  http://public-repo-1.hortonworks.com/HDF/centos7-ppc/3.x/updates/3.2.0.0/hdf.repo
             mpack:  http://public-repo-1.hortonworks.com/HDF/centos7-ppc/3.x/updates/3.2.0.0/tars/hdf_ambari_mp/hdf-ambari-mpack-3.2.0.0-520.tar.gz
-install:
+mpack:
         hdf:
-            install: no
+            install: yes 
             purge:  yes
 java:
     home:  /usr/lib/jvm/java-1.8.0-openjdk-1.8.0.191.b12-0.el7_5.ppc64le
