--- a/roles/kdc/tasks/main.yml
+++ b/roles/kdc/tasks/main.yml
@@ -16,8 +16,8 @@
   expect:
     command: kdb5_util create -s
     responses:
-      database master key: "{{ db_master_key }}"
-      database master key to verify: "{{ db_master_key }}"
+      database master key: "{{ kerberos.db_master_key }}"
+      database master key to verify: "{{ kerberos.db_master_key }}"
   when: not kdc_db.stat.exists and ansible_facts['os_family'] == "RedHat"  
 - name: Start the KDC server and the KDC admin server
   systemd:
@@ -32,11 +32,11 @@
   expect:
     command: kadmin.local -q "addprinc admin/admin"
     responses:
-      Enter password for principal: "{{ admin_princ_pswd }}"
-      Re-enter password for principal: "{{ admin_princ_pswd }}"
+      Enter password for principal: "{{ kerberos.admin_princ_pswd }}"
+      Re-enter password for principal: "{{ kerberos.admin_princ_pswd }}"
   when: ansible_facts['os_family'] == "RedHat" 
 - name: ensure that kdc acl file includes the realm
-  shell: sed -i '1,$s/EXAMPLE.COM/{{realm}}/g' /var/kerberos/krb5kdc/kadm5.acl
+  shell: sed -i '1,$s/EXAMPLE.COM/{{kerberos.realm}}/g' /var/kerberos/krb5kdc/kadm5.acl
   when: ansible_facts['os_family'] == "RedHat" 
 - name: restart the kadmin process
   systemd:
