cluster template json

--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -8,6 +8,9 @@ release:
             mpack:  http://public-repo-1.hortonworks.com/HDF/centos7-ppc/3.x/updates/3.2.0.0/tars/hdf_ambari_mp/hdf-ambari-mpack-3.2.0.0-520.tar.gz
             install: no 
             purge: no 
+            version: 3.2.0.0-520
+        hdp:
+            version: 3.2.0.0-520
 
 
 blueprint:
