--- a/roles/blueprints/tasks/main.yml
+++ b/roles/blueprints/tasks/main.yml
@@ -35,4 +35,16 @@
   delegate_to: "{{item}}"
   delegate_facts: True
   loop: "{{groups['gateway']|union(groups['agent'])}}"  
+- name: VDF registration
+  uri:
+    url: "http://{{groups['gateway'][0]}}:8080/api/v1/version_definitions"
+    method: POST
+    headers:
+      X-Requested-By: ambari
+    user: admin
+    password: admin
+    body_format: raw
+    body: "{{ lookup('template','templates/version_def.json.j2') | to_json }}" 
+    force_basic_auth: yes
+    status_code: 201   
 ...
