--- a/roles/database-mysql/tasks/main.yml
+++ b/roles/database-mysql/tasks/main.yml
@@ -3,6 +3,15 @@
 - name: install mariadb for RedHat systems
   yum: name="mariadb-server.{{ ansible_architecture }}" state=latest update_cache=yes
   when: ansible_facts['os_family'] == "RedHat"
+- name: fix max column size MySQL error
+  lineinfile:
+    path: /etc/my.cnf
+    insertafter: '^ *\[mysqld\] *$' 
+    line: '{{item}}'
+  loop:
+    - innodb_large_prefix
+    - innodb_file_per_table = 1
+    - innodb_file_format = Barracuda
 - name: enable service mariadb for RedHat systems
   systemd:
     name: mariadb
