--- a/roles/blueprints/tasks/main.yml
+++ b/roles/blueprints/tasks/main.yml
@@ -46,5 +46,33 @@
     body_format: raw
     body: "{{ lookup('template','templates/version_def.json.j2') | to_json }}" 
     force_basic_auth: yes
-    status_code: 201   
+    status_code: 201  
+
+- name: register the blueprint
+  uri:
+    url: "http://{{groups['gateway'][0]}}:8080/api/v1/blueprints/blueprint-def?validate_topology=false"
+    method: POST
+    headers:
+      X-Requested-By: ambari
+    user: admin
+    password: admin
+    body_format: raw
+    body: "{{ lookup('template','templates/' + blueprint.location + '/blueprint.json.j2') | to_json }}" 
+    force_basic_auth: yes
+    status_code: 201  
+- name: deploy the blueprint
+  uri:
+    url: "http://{{groups['gateway'][0]}}:8080/api/v1/clusters/blueprint-def"
+    method: POST
+    headers:
+      X-Requested-By: ambari
+    user: admin
+    password: admin
+    body_format: raw
+    body: "{{ lookup('template','templates/' + blueprint.location + '/template.json.j2') | to_json }}" 
+    force_basic_auth: yes
+    status_code: 202,201  
+  tags:
+  - justThis    
+  
 ...
