--- a/roles/blueprints/tasks/main.yml
+++ b/roles/blueprints/tasks/main.yml
@@ -50,7 +50,7 @@
 
 - name: register the blueprint
   uri:
-    url: "http://{{groups['gateway'][0]}}:8080/api/v1/blueprints/blueprint-def?validate_topology=false"
+    url: "http://{{groups['gateway'][0]}}:8080/api/v1/blueprints/{{cluster.name}}?validate_topology=false"
     method: POST
     headers:
       X-Requested-By: ambari
@@ -62,7 +62,7 @@
     status_code: 201  
 - name: deploy the blueprint
   uri:
-    url: "http://{{groups['gateway'][0]}}:8080/api/v1/clusters/blueprint-def"
+    url: "http://{{groups['gateway'][0]}}:8080/api/v1/clusters/{{cluster.name}}"
     method: POST
     headers:
       X-Requested-By: ambari
